# instacollector-api

./: .env.sample  .gitignore  README.MD  pyproject.toml  requirements.txt  run.py  test_instacollector_app.py
app/: __init__.py  blueprints.py  helpers.py
instance/: config.py
