[tool.poetry]
name = "Instacollector-API"
version = "0.1.0"
description = "A simple api that allows to gather information from instagram user profile and store it for later use"
authors = ["Isaque Alves <isaquealves@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
instaloader = "^4.2"
Flask = "^1.1"
Flask-API = "^1.1"
python-dotenv = "^0.10.3"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
moto = "^1.3"
pytest = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
